Release 3.1.0 (2014-08-??)
~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- Use a general template directory for non-specific templates [Patrick Uiterwijk]

General:
- Add missing debug info for OpenID API [Patrick Uiterwijk]
- Rework the Auth_Base class to use AbstractBaseClass [Ralph Bean, Patrick Uiterwijk]


Release 3.0.7 (2014-07-25)
~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- Adds LDAP authentication module [Patrick Uiterwijk]


Release 3.0.6 (2014-07-18)
~~~~~~~~~~~~~~~~~~~~~~~~~~

General:
- Got rid of the flask-sqlalchemy dependency [Patrick Uiterwijk]
- The database url now goes in GLOBAL -> database_url [Patrick Uiterwijk]

New:
- Added a database_debug argument to enable debugging SQL statement [Patrick Uiterwijk]


Release 3.0.5 (2014-07-18)
~~~~~~~~~~~~~~~~~~~~~~~~~~

Fixes:
- Only give email alias with FAS module in case of CLA+1 instead of CLA [Pierre-Yves Chibon]


Release 3.0.4 (2014-07-14)
~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- Added a cleanup script to clear expired Remembered entries [Patrick Uiterwijk]


Release 3.0.3 (2014-07-09)
~~~~~~~~~~~~~~~~~~~~~~~~~~

General:
- Remove translation hooks and dependencies [Patrick Uiterwijk]
- Update webSilvia to protocol version request-1 [Patrick Uiterwijk]

New:
- Add the FedOAuth version in the generator meta tag [Patrick Uiterwijk]
- Make it possible for the FAS module to give the users' email alias [Patrick Uiterwijk]

Fixes:
- Add some more logging to the transaction stealing protection [Patrick Uiterwijk]
- Make it possible to use an unlisted auth module by specifying the URL directly [Patrick Uiterwijk]


Release 3.0.2 (2014-06-23)
~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- pySilvia renamed to webSilvia [Patrick Uiterwijk]
- Auto-submit the webSilvia request form [Patrick Uiterwijk]
- Add a list of required_credentials for webSilvia [Patrick Uiterwijk]

Fixes:
- Only returns the intermediate API auth step if it's multi-step [Patrick Uiterwijk]
- Returns the signed OpenID response instead of an exception [Patrick Uiterwijk]

