@@ -1,5 +1,2 @@
 TODO:
 - Write documentation
-
-
-- Make OpenID send requested_attributes...
