@@ -4,6 +4,9 @@ Release 3.1.0 (2014-08-??)
 New:
 - Use a general template directory for non-specific templates [Patrick Uiterwijk]
 
+Fixes:
+- OpenID now provides requested_attributes [Patrick Uiterwijk]
+
 General:
 - Add missing debug info for OpenID API [Patrick Uiterwijk]
 - Rework the Auth_Base class to use AbstractBaseClass [Ralph Bean, Patrick Uiterwijk]
